<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cooltey.headachediary.MainActivity$PlaceholderFragment" >    
    <TextView
	    android:id="@+id/calendar_date"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   	android:layout_margin="10dp"
	   	android:textSize="26sp"/>
    <LinearLayout 
	    android:id="@+id/calendar_title"
    	android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@+id/calendar_date"
   		android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/week_sun"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_sun"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_mon"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_mon"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_tue"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_tue"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_wed"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_wed"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_thu"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_thu"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_fri"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_fri"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
        <TextView 
            android:id="@+id/week_sat"
    		android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="0.14"
   			android:text="@string/week_sat"
   			android:background="@drawable/layer_title_item"
   			android:layout_margin="5dp"
   			android:padding="5dp"
   			android:gravity="center"
            />
    </LinearLayout>
	<LinearLayout 
	    android:id="@+id/calendar_zone"
    	android:layout_width="match_parent"
   		android:layout_height="match_parent"
   		android:layout_below="@+id/calendar_title"
   		android:orientation="vertical"/>
</RelativeLayout>
